<resources>
    <string name="app_name">MagicPantry</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_notifications">Notifications</string>

    <string name="review_ingredients_header">Review Ingredients</string>

    <!-- Pantry Fragment -->
    <string name="button_text_scan">Scan Receipt</string>
    <string name="button_text_add_item">Add Item</string>
    <string name="low_stock_header">Low Stock</string>
    <string name="all_ingredients_header">All Ingredients</string>
    <string name="checkbox_filter_low_stock_text">Filter Low Stock</string>

    <!-- Manual Ingredient Input Activity -->
    <string name="manual_ingredient_name_label">Name *</string>
    <string name="manual_amount_label">Amount *</string>
    <string name="manual_unit_label">Unit</string>
    <string name="manual_price_label">Price per Unit</string>
    <string name="manual_threshold_label">Amount Threshold for Low Stock</string>
    <string name="manual_isnotify_label">Notify when Low on Stock</string>
    <string name="manual_add_item_btn">Add to Pantry</string>
    <string name="add_all_button_text">Add All</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="add_button">Add</string>
    <string name="review_finish_button">Finish</string>
    <string name="review_save_button">Save</string>
    <string name="item_menu_manualinput_delete_title">Delete</string>
    <string name="save_button">Save</string>

    <!-- Add to Shopping List Dialog -->
    <string name="dialog_add_to_shopping_list_title">How much \"%s\" do you want to add to your shopping list?</string>
    <string name="dialog_add_button_text">Add</string>
    <string name="dialog_cancel_button_text">Cancel</string>

    <!-- Change Shopping List Item amount Dialog -->
    <string name="dialog_change_shopping_item_amount_title">What is the new amount of \"%s\" that you need to purchase?</string>
    <string name="dialog_save_button_text">save</string>

    <!-- Shopping List Fragment -->
    <string name="shop_list_add_button">Add</string>
    <string name="shopping_list_header">Shopping List</string>

    <!-- Recipe Fragment -->
    <string name="add_recipe">Add recipe</string>
    <string name="filter_cookable_recipes">Filter Cookable Recipes</string>
    <string name="all_recipe">All Recipes</string>
    <string name="cookable_recipe">Cookable Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cookingtime">CookingTime</string>
    <string name="noofservings">NoOfServings</string>
    <string name="enough_ingredients">Enough Ingredients</string>
    <string name="title_activity_ingredient_list_add">IngredientListAdd</string>

    <!-- Single Recipe Activity -->
    <string name="confirm_add_missing_ingredient_to_shopping_list_msg">
        Do you want to add all the missing ingredients in this recipe to your shopping list?
    </string>
    <string name="dialog_add_missing_ingredients_title">Confirm?</string>
    <string name="dialog_add_missing_ingredients_confirm">Confirm</string>
    <string name="dialog_add_missing_ingredients_cancel">Cancel</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Ingredient List Add Activity -->
    <string name="item_menu_ingredient_add_title">Add Ingredient</string>
    <string name="ingredient_add_dialog_title">Enter in the details of the new ingredient</string>
    <string name="ingredient_add_dialog_btn_add">Add</string>
    <string name="ingredient_add_dialog_btn_cancel">Cancel</string>

    <!-- Receipt Scanner -->
    <string name="receipt_scanner_scan_btn">Scan</string>
    <string name="receipt_scanner_select_image_btn">Select image</string>

    <!-- Notifications -->
    <string name="confirm_add_low_ingredients_to_shopping_list_msg">
        Do you want to add all the low stock ingredients to your shopping list?
    </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>