<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg_white"
    android:elevation="2dp"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="139dp"
        android:layout_height="match_parent"
        android:gravity="center"
        app:srcCompat="@drawable/magic_pantry_app_logo"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/recipe_name"
            android:textColor="#000000"
            android:textSize="28sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/ic_baseline_access_time_24"></ImageView>

            <TextView
                android:id="@+id/CookingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/cookingtime"
                android:textColor="#000000"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/ic_baseline_restaurant_24"></ImageView>

            <TextView
                android:id="@+id/NoOfServings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/noofservings"
                android:textColor="#000000"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/enoughIngredientsImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/low_stock"></ImageView>

            <TextView
                android:id="@+id/EnoughIngredientsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/enough_ingredients"
                android:textColor="#000000"></TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>