<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantry.PantryFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_scan_receipt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_scan"
                    android:layout_weight="12"
                    app:icon="@drawable/ic_camera_solid"
                    app:iconGravity="textStart"
                    android:textSize="16sp"
                    app:cornerRadius="8dp"
                    android:backgroundTint="@color/mp_yellow"
                    android:layout_gravity="center_vertical"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_ingredient"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:backgroundTint="@color/mp_yellow"
                    android:text="@string/button_text_add_item"
                    android:textSize="16sp"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_plus_solid"
                    app:iconGravity="textStart"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/header_pantry"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_bg_blue"
                    android:paddingStart="15dp"
                    android:text="@string/all_ingredients_header"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="15" />

                    <CheckBox
                        android:id="@+id/checkbox_filter_low_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/mp_yellow"
                        android:text="@string/checkbox_filter_low_stock_text"
                        android:textColor="@color/white" />

                </LinearLayout>

            </RelativeLayout>

            <ListView
                android:id="@+id/listview_pantry_all_ingredients"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="10sp"
                android:layout_weight="1"
                android:focusable="true"/>

        </LinearLayout>

</LinearLayout>