<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".ui.manualingredientinput.edit.PantryEditIngredientActivity">

    <ScrollView
        android:id="@+id/pantry_edit_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredient_edit_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_ingredient_name_label"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mp_grey"
                app:boxStrokeColor="@color/mp_grey"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pantry_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ingredient_edit_amount_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manual_amount_label"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/mp_grey"
                        app:boxStrokeColor="@color/mp_grey"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pantry_edit_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textSize="20sp"
                            android:maxLength="6" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manual_unit_label"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/mp_grey"
                        app:boxStrokeColor="@color/mp_grey"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="4dp">

                        <Spinner
                            android:id="@+id/pantry_edit_unit_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/ingredient_edit_price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/manual_price_label"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mp_grey"
                app:boxStrokeColor="@color/mp_grey"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pantry_edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/pantry_edit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_pantry_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/mp_grey"
            android:text="@string/cancel_button_text"
            android:textColor="@color/black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_save_pantry_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/mp_blue"
            android:text="@string/review_save_button" />
    </LinearLayout>

</LinearLayout>